--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "displayName": "CryXmlViewer",
   "description": "Viewer for the binary XML files used in CryEngine",
   "publisher": "Heffay Presents",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Markemp/CryXmlViewer"
+  },
+  "license": "MIT",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.85.0"
